add an "outer div" to each block so we can display gaps in the stack during animation

--- a/dumbhippo/trunk/server/web/html/stacker.html
+++ b/dumbhippo/trunk/server/web/html/stacker.html
@@ -51,11 +51,16 @@ var djConfig = {
 			margin:				0px;
 			padding:			0px;
 		}
+		.dh-stacked-block-outer {
+			position:			relative;		
+			margin-bottom:		6px;
+			/* for opacity to work in IE you have to set width or height, or use position absolute */
+			width:				480px;
+		}		
 		.dh-stacked-block {
 			position:			relative;		
 			background-color:	blue;
 			color:				white;
-			margin-bottom:		6px;
 			text-align:			left;
 			/* for opacity to work in IE you have to set width or height, or use position absolute */
 			width:				480px;
