- maintain invariant that block._div is the latest/current div - smooth out some jumpiness by including margins in the animation geometry computations

--- a/dumbhippo/trunk/server/web/html/stacker.html
+++ b/dumbhippo/trunk/server/web/html/stacker.html
@@ -55,18 +55,18 @@ var djConfig = {
 			position:			relative;		
 			/* for opacity to work in IE you have to set width or height, or use position absolute */
 			width:				480px;
+			overflow:			hidden;
 			/* don't add a margin here or it makes the animation ugly when blocks move 
 			 * since we modify the height of this block in that animation but not the margin
 			 */
 		}		
 		.dh-stacked-block {
-			position:			relative;		
+			position:			relative;
 			background-color:	blue;
 			color:				white;
 			text-align:			left;
 			/* for opacity to work in IE you have to set width or height, or use position absolute */
 			width:				480px;
-			margin-bottom:		6px;			
 		}
 		.dh-stacked-block .dh-title {
 			position:			relative;
